Try fixing YouTube embedding
Doesn’t fit the screen on mobile.

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,15 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700);
 
+/*
+** YouTube Video Embed
+** Source:
+** https://avexdesigns.com/blog/responsive-youtube-embed
+*/
+.video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
+
+.video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
 /* Colours */
 $twitter:        #6dabda;
 $linkedin:       #2b77b1;
